<resources>
    <string name="app_name">Berry e-commerce</string>
    <string name="action_settings">Settings</string>
    <string name="product_details">Product Details</string>
    <string name="availability">See if it\'s available</string>
    <string name="jewelry">Jewelry</string>
    <string name="engagement">Engagement</string>
    <string name="accessories">Accessories</string>
    <string name="watches">Watches</string>
    <string name="home">Home</string>
    <string name="card">Card</string>
</resources>
